--- a/finance/static/ngTemplates/app.finance.sales.html
+++ b/finance/static/ngTemplates/app.finance.sales.html
@@ -1,12 +1,15 @@
 <breadcrumb></breadcrumb>
 <div class="container-fluid">
   <div class="col-md-6">
+    <div class="col-md-12 text-center">
+      <h3>External Invoices</h3>
+    </div>
     <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
   </div>
   <div class="col-md-6" style="border-left:solid 2px #eee;">
+    <div class="col-md-12 text-center">
+      <h3>CRM Invoices</h3>
+    </div>
     <generic-Table data="data.crmData" config-Obj="{{crmConfig}}" callback-Fn="crmTableAction"></generic-Table>
   </div>
-
-
-
 </div>
