--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -1,6 +1,12 @@
 <div class="row" style="margin:0px;">
+  <style>
+    .nohover:hover {
+      transform: scale(1);
+      transition: 0;
+    }
+  </style>
 
-  <div class="container-fluid" ng-class='banner'  style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/studentimg.jpg');background-size:cover;background-repeat:no-repeat;height:40vh;">
+  <div class="container-fluid" ng-class='banner' style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('/static/images/24tut/studentimg.jpg');background-size:cover;background-repeat:no-repeat;height:40vh;">
   </div>
 
   <div class="container" style="padding-bottom:4em;">
@@ -59,29 +65,35 @@
     </div>
   </div>
 
-  <div class="container-fluid" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;">
+  <div class="container-fluid" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;" ng-hide="device.smallDevice">
     <div class="container">
-      <div class="col-md-2 clickchange" ng-model='books' ng-class="click1" ng-click="clicks(1)">
-        <span><b>Books</b><i ng-if="device.smallDevice " class="fa {{books==true?'fa-times':'fa-angle-up'}}" style="font-size:30px;position:absolute;right:1em;"></i></span>
+      <div class="col-md-2 clickchange" ng-class="click1" ng-click="clicks(1)">
+        <span><b>Books</b></span>
         <div ng-class="class1"></div>
       </div>
-      <div class="col-md-2 clickchange" ng-model='videos' ng-class="click2" ng-click="clicks(2)">
-        <span><b>Video Course</b><i ng-if="device.smallDevice " class="fa {{videos==true?'fa-times':'fa-angle-up'}}" style="font-size:30px;position:absolute;right:1em;"></i></span>
+      <div class="col-md-2 clickchange" ng-class="click2" ng-click="clicks(2)">
+        <span><b>Video Course</b></span>
         <div ng-class="class2"></div>
       </div>
       <a href="/exam">
-        <div class="col-md-2 clickchange" ng-model='testseries' ng-class="click3" ng-click="clicks(3)">
-          <span><b>Test Series</b><i ng-if="device.smallDevice " class="fa {{testseries==true?'fa-times':'fa-angle-up'}}" style="font-size:30px;position:absolute;right:1em;"></i></span>
+        <div class="col-md-2 clickchange" ng-class="click3" ng-click="clicks(3)">
+          <span><b>Test Series</b></span>
           <div ng-class="class3"></div>
         </div>
       </a>
-      <div class="col-md-2 clickchange" ng-model='forum' ng-class="click4" ng-click="clicks(4)">
-        <span><b>Forum</b><i ng-if="device.smallDevice " class="fa {{forum==true?'fa-times':'fa-angle-up'}}" style="font-size:30px;position:absolute;right:1em;"></i></span>
+      <!-- <a href="/forum"> -->
+      <div class="col-md-2 clickchange" ng-class="click4" ng-click="clicks(4)">
+        <span><b>Forum</b></span>
         <div ng-class="class4"></div>
       </div>
-      <div class="col-md-3 clickchange1" ng-model='refbook' ng-class="click5" ng-click="clicks(5)">
-        <span><b>Reference Books</b><i ng-if="device.smallDevice " class="fa {{refbook==true?'fa-times':'fa-angle-up'}}" style="font-size:30px;position:absolute;right:1em;"></i></span>
+      <!-- </a> -->
+      <div class="col-md-2 clickchange" ng-class="click5" ng-click="clicks(5)">
+        <span><b>Refernce Books</b></span>
         <div ng-class="class5"></div>
+      </div>
+      <div class="col-md-2 clickchange1" ng-class="click6" ng-click="clicks(6)">
+        <span><b>Notes</b></span>
+        <div ng-class="class6"></div>
       </div>
     </div>
   </div>
@@ -89,108 +101,132 @@
     <div class="col-md-8 col-md-offset-2">
       <div ng-repeat="a in bookscontent">
         <div class="row " ng-class="!$last ? 'contentborder' : 'contentborderlast'" style="position:relative;">
-          <div ng-click="headclick($index)" ng-class="!$last ? 'headblock' : 'headblocklast'">
-            <span class="titlesize"><b>{{a.title}}<span style="font-size:15px;margin-left:1em;"> (6 Lessons)</span></b></span>
+          <div class="headblock" ng-click="headclick($index)">
+            <span class="titlesize"><b>{{a.title}}<span style="font-size:15px;margin-left:0.5em;"> (6 Lessons)</span></b></span>
             <span class="titleicon"><i class="fa fa-angle-{{a.view==true?'up':'down'}}" style="font-size:30px;"></i></span>
             <div ng-class="!$last ? 'roundcircle' : 'roundcirclelast'"> </div>
           </div>
           <div ng-show="a.view">
-            <div>
-              <div class="row " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-                <div class="col-md-10 col-xs-11  firstchild ">{{a.chapter.one}}</div>
-                <div class="col-md-2 col-xs-1  firstchild right_on">1</div>
+            <div ng-repeat="b in a.chapter | limitTo:5">
+              <div class="row contentblock">
+                <div class="col-md-10 col-xs-11" style="{{$last && !a.view1 ? 'color:#a3a3a3;':''}}{{$first?'border-top:0':''}}">{{b.content}}</div>
+                <div class="col-md-2 col-xs-1  right_on" style="{{$last && !a.view1 ? 'color:#a3a3a3;':''}}{{$first?'border-top:0':''}}">{{b.page}}</div>
               </div>
-            </div>
-            <div class="row " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-              <div class="col-md-10 col-xs-11">{{a.chapter.two}}</div>
-              <div class="col-md-2 col-xs-1  right_on">2</div>
-            </div>
-            <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-              <div class="col-md-10 col-xs-11">{{a.chapter.three}}</div>
-              <div class="col-md-2 col-xs-1 right_on">5</div>
-            </div>
-            <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-              <div class="col-md-10 col-xs-11">{{a.chapter.four}}</div>
-              <div class="col-md-2 col-xs-1 right_on">7</div>
-            </div>
-            <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-              <div class="col-md-10 col-xs-11">{{a.chapter.five}}</div>
-              <div class="col-md-2 col-xs-1 right_on">10</div>
             </div>
             <div ng-show="a.view1">
-              <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-                <div class="col-md-10 col-xs-11">{{a.chapter.six}}</div>
-                <div class="col-md-2 col-xs-1 right_on">13</div>
-              </div>
-              <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
-                <div class="col-md-10 col-xs-11">{{a.chapter.seven}}</div>
-                <div class="col-md-2 col-xs-1 right_on">15</div>
+              <div ng-repeat="b in a.chapter | limitTo:len:5">
+                <div class="row  contentblock">
+                  <div class="col-md-10 col-xs-11">{{b.content}}</div>
+                  <div class="col-md-2 col-xs-1 right_on">{{b.page}}</div>
+                </div>
               </div>
             </div>
             <div class="text-center">
-              <button class="btn-style1" ng-click="loadcontent($index)">{{a.view1 == true?'Load Less':'Load More'}}</button>
+              <button class="btn-style1" ng-click="loadcontent($index,a.chapter.length)">{{a.view1 == true?'Load Less':'Load More'}}</button>
             </div>
 
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="container-fluid" ng-hide="!device.smallDevice">
+    <div class="container" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;">
+      <ng-owl-carousel class="owl-theme" owl-items="items" owl-properties="properties" owl-ready="ready($api)">
+        <div ng-repeat="a in items">
+          <div ng-if="$index==2">
+            <a href="/exam">
+              <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
+                <span style="font-size:35px;"><b>{{a.head}}</b></span>
+                <div ng-class="a.class2"></div>
+              </div>
+            </a>
+          </div>
+          <div ng-if="$index!=2">
+            <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
+              <span style="font-size:35px;"><b>{{a.head}}</b></span>
+              <div ng-class="a.class2"></div>
+            </div>
+          </div>
+
+        </div>
+      </ng-owl-carousel>
     </div>
   </div>
   <div class="container-fluid no_padding" ng-show="videos">
     <div class="col-md-12 min_padd text-center" style="background:#eee;">
       <div class="col-md-3 video_card text-center" ng-repeat="i in subject">
         <a href="/courseVideo">
-        <h2>{{i.name}}</h2>
-      </a>
+          <h2>{{i.name}}</h2>
+        </a>
       </div>
     </div>
   </div>
 
-  <div class="container" ng-show="forum">
-    <div ng-repeat="a in forumlist" style="margin-top:3em">
-      <div class="col-md-8 col-md-offset-2 ">
+  <div class="container-fluid" ng-show="forum">
+    <div ng-repeat="a in forumlist" style="margin-top:3em;">
+      <div class="col-md-6 col-md-offset-3 col-xs-12 no_padding">
         <div>
-          <div style="padding: 1em;border-bottom: 1px solid #eaecf0;display: flex;align-items: center;">
-            <div style="width:60px;">
+
+          <div class="col-md-1 col-xs-2">
+            <div style="width:60px;padding-top: 1.5em;">
               <img src="{{a.imgsrc}}" style="width:45px;border-radius:50%;height:45px;" />
             </div>
-            <div class="" style="flex: 0 1 auto;max-width: 65%;font-size: 1em;">
-              <div class="toprow" style="">
-                <i class="fa fa-thumb-tack"></i>
-                <span style="font-size:17px;color: #3C4556;cursor:pointer;" ng-click="forumview($index)">{{a.title}}</span>
-              </div>
-              <div class="bottomrow" style="font-size: 1em;">
-                <span class="" style="font-size:15px;color: #3C4556;">{{a.secondtext}}</span>
-              </div>
-            </div>
-            <div style="flex: 1 0 0;text-align: right;color: #949fb4;">
-              <span style="text-align: right;">Replies:{{a.replies}}</span>
-            </div>
           </div>
-          <div class="" style='padding: 1em;border-bottom: 1px solid #eaecf0;' ng-show="count==$index?openedforum:''">
-            <div ng-repeat="b in a.users">
-              <div style="padding: 1.5em;{{$last?'':'border-bottom: 1px solid #eaecf0'}};display: flex;align-items: center;" ng-mouseover="open = true" ng-mouseleave="open = false">
-                <div style="width:60px;flex: 0 0 auto;text-align: left;">
-                  <img src="{{b.userimg}}" style="width:45px;border-radius:50%;height:45px;" />
+          <div class="col-md-11 col-xs-10 no_padding" style="">
+            <div class="no_pad" style="border-bottom: 1px solid #eaecf0;display: flex;align-items: center;">
+
+              <div class="contentrow" style="flex: 0 1 auto;" ng-click="forumview($index)">
+                <div class="toprow" style="">
+                  <i class="fa fa-thumb-tack"></i>
+                  <span style="font-size:17px;color: #3C4556;cursor:pointer;">{{a.title}}</span>
                 </div>
-                <div style="flex: 0 1 auto;max-width: 65%;font-size: 1em;">
-                  <span>{{b.name}}</span>
-                  <div style="padding-top: 1em;">
-                    <span style="font-size:16px;">{{b.comment}}</span>
-                  </div>
-                  <div style="margin-top:1em;">
-                    <button class="btn btn-primary" type="button" ng-show="open"> Reply</button>
+                <div class="bottomrow" style="font-size: 1em;">
+                  <span class="" style="font-size:15px;color: #3C4556;">{{a.secondtext}}</span>
+                  <span class="heartsym1 centeralignn" style=""><span class="">Replies:</span>{{a.users.length}}</span>
+                </div>
+              </div>
+              <div class=" heartsym centeralignn" style="flex: 1 0 0;color: #949fb4;">
+                <span style="text-align: right;">Replies:{{a.users.length}}</span>
+              </div>
+            </div>
+            <div class="childforum" style='border-bottom: 1px solid #eaecf0;' ng-show="forumlist[$index].status==true">
+              <div ng-repeat="b in a.users">
+                <div class="col-md-1 no_padding">
+                  <div style="width:60px;text-align: left;padding-top: 1.5em;">
+                    <img src="{{b.userimg}}" style="width:45px;border-radius:50%;height:45px;" />
                   </div>
                 </div>
-                <div style="flex: 1 0 0;text-align: right;">
-                  <i class="fa fa-heart" aria-hidden="true"></i>
+                <div style="padding: 1.5em  0;{{$last?'':'border-bottom: 1px solid #eaecf0'}};display: flex;align-items: center;" class="effecton">
+
+                  <div style="flex: 0 1 auto;width: 85%;font-size: 1em;">
+                    <span>{{b.name}}</span>
+                    <div style="padding-top: 1em;">
+                      <span style="font-size:16px;">{{b.comment}}</span>
+                    </div>
+                    <div style="margin-top:1em;" ng-click="replyto($parent.$index,$index)">
+                      <button class="btn btn-primary visible" type="button" ng-class="a.users[$index].status==true?'nodisplay':''"> Reply</button>
+                    </div>
+                    <div style="padding-top:1em;" ng-show="a.users[$index].status==true">
+                      <textarea class="autoExpand comment_areaa" type="textarea" ng-model="comment" placeholder='Add  a comment Here..' style="min-width:100%;"></textarea>
+                      <div class="pull-right" style="padding-top:10px;">
+                        <button type="button" class="btn btn-default" ng-click="cancel($parent.$index,$index)">Cancel</button>
+                        <button type="button" class="btn btn-primary">Reply</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div style="flex: 1 0 0;text-align: right;">
+                    <i class="fa fa-heart heartsym" aria-hidden="true"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+
   </div>
 
   <div class="container no_padding" ng-show="refbook">
@@ -221,8 +257,30 @@
       </div>
     </div>
   </div>
+  <div class="container" ng-show="notes">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+          <div ng-repeat="a in mathformulas ">
+            <div class="col-md-4" style="margin:1em 0">
+              <div class="cardstype nohover" style="margin-top:3em;border-top-left-radius: 50px;min-height:0vh;min-height:20vh;text-align: left;">
+                <div style="cursor:pointer;text-align: center;padding:2em 1em 1em 1em;min-height: 9em;"><span style="font-size:17px;">{{a.chapter}} </span><br />
+                  <span style="font-size:17px;"> {{a.name}}</span>
+                </div>
+                <div class="text-center">
+                  <button class="btn-style1" style="border-top-left-radius: 15px;padding: 0.5em 1em;margin-top: 0em;" ng-click="chapterclick(a.id,a)">View</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
+
+
 
 <div class="container-fluid" style="background-color: #fff;">
   <div class="container" style=" margin-bottom: 2em;text-align: center;">
