--- a/homepage/static/ngTemplates/app.homepage.examresults.html
+++ b/homepage/static/ngTemplates/app.homepage.examresults.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h2 class="text-center"><b>Exam Summary</b></h2>
+  <h2 class="text-center" style="padding-top: 2em;"><b>Exam Summary</b></h2>
   <div class="row">
     <div class="col-md-offset-1 col-md-3" style="margin-top:2em;">
       <span style="font-size:18px;"><b>Total No of Questions:</b></span><span style="font-size:18px;"><b>&nbsp; 24</b></span>
@@ -82,11 +82,11 @@
   </div>
   <div style="margin-top:2em;text-align:center;">
     <button class="btnaction1" style="min-width:10%;" ng-click=""><b>View Score</b></button>
-    <div class="container text-center">
+    <!-- <div class="container text-center">
       <div class="col-md-12" style="margin-top:2em;border:1px solid #000;">
         <canvas id="pie-chart" width="800" height="450"></canvas>
 
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
