--- a/static_shared/ngTemplates/reviewInfo.html
+++ b/static_shared/ngTemplates/reviewInfo.html
@@ -84,7 +84,7 @@
     </div>
 
   <!-- message section -->
-  <div class="" style="margin-bottom:20px;display:block">
+  <!-- <div class="" style="margin-bottom:20px;display:block">
     <div class="row col-md-12" ng-repeat="msg in fullChatData">
       <div ng-if="!msg.logs" class="container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#fff;border:2px solid #eee;':'left; background-color:#175aa5;'}} padding:5px 10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
         <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="white-space:pre-wrap;color: {{msg.sentByAgent ? 'black':'white'}}" >
@@ -100,6 +100,33 @@
       <div ng-if="!msg.logs" class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:3rem' : 'padding-left:3rem'}};">
         <span ng-if="msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:70%; " class="text-muted" ng-init="cal = calculateTime(msgData[$index-1].created , msg.created)">{{msg.created | date : 'hh:mm:a' }} , {{cal}}</span>
         <span ng-if="!msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:70%; " class="text-muted">{{msg.created | date : 'hh:mm:a' }}</span>
+      </div>
+    </div>
+  </div> -->
+
+
+
+  <div class="col-md-12" style="margin-bottom:20px;">
+    <div class="row" ng-repeat="msg in fullChatData">
+      <!-- <h3>{{msg.message}}</h3> -->
+      <div ng-if="!msg.logs" class="row container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+      <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;" ><h5>{{msg.message}}</h5></p>
+      <!-- <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;" ><h5>{{msg.message}}</h5></p> -->
+       <img ng-if="msg.attachmentType == 'image'" ng-src="{{msg.attachment}}" style="width:250px;">
+       <video ng-if="msg.attachmentType == 'video'" width="280" height="240" ng-src="{{msg.attachment}}" controls></video>
+       <audio ng-if="msg.attachmentType == 'audio'" ng-src="{{msg.attachment}}" controls></audio>
+       <p class="text-center" ng-if="msg.attachmentType == 'application'" style="word-wrap: break-word;"><a ng-href="{{msg.attachment}}" target = "_blank" ><i class="fa {{msg.attachment.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{msg.attachment.split('chat/')[1]}}  </p>
+       <div ng-if="msg.attachmentType == 'youtubeLink'" >
+         <iframe width="100%" height="215" ng-src="{{msg.message | trusted}}" frameborder="0" allowfullscreen></iframe>
+       </div>
+      </div>
+      <!-- <div class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};" >
+        <span style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" >{{msg.created | timeAgo}}</span>
+      </div> -->
+      <div ng-if="!msg.logs" class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};"  >
+        <span ng-if="msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" ng-init="cal = calculateTime(fullChatData[$index-1].created , msg.created)" >{{msg.created | date : 'hh:mm:a' }} , {{cal}}</span>
+        <span ng-if="!msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" >{{msg.created | date : 'hh:mm:a' }}</span>
+
       </div>
     </div>
   </div>
