--- a/support/static/ngTemplates/app.masterSheet.products.html
+++ b/support/static/ngTemplates/app.masterSheet.products.html
@@ -11,5 +11,8 @@
     <div class="btn btn-primary" ng-click="uploadSheet()">
       Upload
     </div>
+    <div ng-if="count" style="color:rgb(164, 221, 170)">
+      {{count}} products uploaded
+    </div>
 
   </div>
