--- a/finance/static/ngTemplates/app.finance.pettyCash.projectForm.html
+++ b/finance/static/ngTemplates/app.finance.pettyCash.projectForm.html
@@ -39,9 +39,17 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" ng-if="projForm.pk==null">
       <div class="col-md-12 text-center">
         <button type="button" class="btn btn-success" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="createProject()" confirm-button-type="default" cancel-button-type="default">Create Project</button>
+      </div>
+    </div>
+    <div class="row" ng-if="projForm.pk">
+      <div class="col-md-6">
+        <span class="btn btn-success" ng-click="updateProject()">Update</span>
+      </div>
+      <div class="col-md-6 text-right">
+        <span class="btn btn-danger" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="closeProject()" confirm-button-type="default" cancel-button-type="default">Close Project</span>
       </div>
     </div>
   </div>
