--- a/finance/static/ngTemplates/app.finance.pettyCash.html
+++ b/finance/static/ngTemplates/app.finance.pettyCash.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col-md-7" style="padding:0px 20px">
-      <div class="well">
+      <div class="row" style="padding:0px 70px">
         <div class="col-md-12 text-center" style="padding-bottom:15px">
           <strong style="font-size:18px">Create Expense Record</strong>
         </div>
