--- a/finance/static/ngTemplates/app.finance.pettyCash.projectForm.html
+++ b/finance/static/ngTemplates/app.finance.pettyCash.projectForm.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-blue text-center">
-  <h3 class="modal-title">Add Project Details</h3>
+  <h3 class="modal-title">{{projForm.pk?'Update':'Add'}} Project Details</h3>
 </div>
 
 <div class="modal-body">
