--- a/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
@@ -33,13 +33,22 @@
       </div>
 
       <div class="col-md-4">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>PO Number</label>
           <input type="text " class="form-control" ng-model="form.poNumber">
-        </div>
+        </div> -->
         <div class="form-group">
           <label>Quotation Number</label>
           <input type="text " class="form-control" ng-model="form.quoteNumber">
+        </div>
+        <div class="form-group">
+          <label>Quotation Date</label>
+          <div class="input-group">
+            <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.quoteDate" is-open="quote.opened" />
+            <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="quote.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+          </div>
         </div>
         <div class="form-group">
           <label>Delivery Date</label>
