--- a/LMS/static/ngTemplates/app.LMS.courses.form.html
+++ b/LMS/static/ngTemplates/app.LMS.courses.form.html
@@ -15,9 +15,9 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="form-group" >
+        <div class="form-group">
           <label>Enrollment Type</label>
-          <select ng-model="form.enrollmentStatus" class="form-control" >
+          <select ng-model="form.enrollmentStatus" class="form-control">
             <option value="open">Open</option>
             <option value="onInvitation">On Invitation</option>
             <option value="admin">Admin</option>
@@ -32,15 +32,17 @@
     </div>
     <div class="form-group">
       <label>DP</label>
-      <input file-model="form.dp" type="file" >
+      <input file-model="form.dp" type="file">
     </div>
     <users-Field data="form.TAs" url="/api/HR/userSearch/" col="4" label="Teaching assistants"></users-Field>
-    <user-field url="/api/HR/userSearch/" label = "Instructor" user="form.instructor"></user-field>
-
-    <button type="button" class="btn btn-primary" ng-click="save()"ng-if="mode == 'new'">
+    <div class="form-group">
+      <label> Instructor</label>
+      <input class="form-control" type="text" ng-model="form.instructor" uib-typeahead="user as getInstructor(user) for user in userSearch($viewValue)" placeholder="Search and select a Instructor">
+    </div>
+    <button type="button" class="btn btn-primary" ng-click="saveCourse()" ng-if="mode == 'new'">
       Save
     </button>
-    <button type="button" class="btn btn-primary" ng-click="save()" ng-if="mode == 'edit'">
+    <button type="button" class="btn btn-primary" ng-click="saveCourse()" ng-if="mode == 'edit'">
       Update
     </button>
   </div>
