--- a/PIM/static/ngTemplates/app.settings.roles.html
+++ b/PIM/static/ngTemplates/app.settings.roles.html
@@ -28,7 +28,7 @@
     <div class="{{rolesPerm ? 'col-md-6':'col-md-offset-3 col-md-6' }}" style="margin-top:15px;">
       <div class="row ">
         <div ng-repeat="r in roles">
-          <div class="col-md-5 card" style="margin: 0px 30px 20px 0px; background-color:var(--headerNavbarHighlight); color:white ; border-radius:5px" >
+          <div class="col-md-5 card" style="margin: 0px 30px 20px 0px; background-color:var(--headerNavbarHighlight); opacity: 0.8;color:white ; border-radius:5px" >
             <div class="row" style="padding:15px; padding-bottom:0px;">
               <span><b>Name :</b> {{r.name}}</span>
             </div>
