--- a/finance/static/ngTemplates/app.finance.invoicing.html
+++ b/finance/static/ngTemplates/app.finance.invoicing.html
@@ -1,30 +1,32 @@
 <breadcrumb></breadcrumb>
 <div class="container-fluid">
   <uib-tabset>
-    <uib-tab active="searchTabActive">
-      <uib-tab-heading>
-        New Sale Order <i class="fa fa-plus"></i>
-      </uib-tab-heading>
-    </uib-tab>
-
-    <uib-tab>
-      <uib-tab-heading>
-        Sale Orders <i class="fa fa-list-ul"></i>
-      </uib-tab-heading>
-    </uib-tab>
-
     <uib-tab>
       <uib-tab-heading>
         New Invoice <i class="fa fa-plus"></i>
       </uib-tab-heading>
+      <div style="margin-top:20px;" ng-include="'/static/ngTemplates/app.finance.invoicing.form.html'">
+      </div>
     </uib-tab>
-
-    <uib-tab>
+    <uib-tab active="searchTabActive">
       <uib-tab-heading>
         Invoices <i class="fa fa-list-ul"></i>
       </uib-tab-heading>
+      <div class="container-fluid">
+        <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+      </div>
     </uib-tab>
-
-
+    <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+      <uib-tab-heading>
+        {{tab.title}}
+        <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+      </uib-tab-heading>
+      <div ng-if="tab.app == 'InvoiceEditor'">
+        <div ng-include="'/static/ngTemplates/app.finance.invoicing.form.html'"></div>
+      </div>
+      <div ng-if="tab.app == 'InvoiceExplore'">
+        <div ng-include="'/static/ngTemplates/app.finance.invoicing.explore.html'"></div>
+      </div>
+    </uib-tab>
   </uib-tabset>
 </div>
