added announcement page.

--- a/LMS/static/ngTemplates/app.LMS.courses.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.courses.explore.html
@@ -36,7 +36,7 @@
       <div class="col-md-8">
         <div class="row">
           <div class="col-md-4">
-            <img ng-src="{{course.instructor | getDP}}" style="height:55px;width:55px;" class="img img-rounded">
+            <img ng-src="{{course.instructor }}" style="height:55px;width:55px;" class="img img-rounded">
           </div>
           <div class="col-md-8">
             {{course.instructor | getName}}
@@ -53,7 +53,7 @@
       <div class="col-md-8">
         <div style="margin-bottom:10px;" class="row" ng-repeat="ta in course.TAs">
           <div class="col-md-4">
-            <img ng-src="{{ta | getDP}}" style="height:55px;width:55px;" class="img img-rounded">
+            <img ng-src="{{ta }}" style="height:55px;width:55px;" class="img img-rounded">
           </div>
           <div class="col-md-8">
             {{ta | getName}}
@@ -78,7 +78,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="enrollment in course.enrollments">
         <span class="info-box-icon" style="background-color:white;">
           <div class="row">
-            <img style="width: 50%;" class="img" ng-src="{{enrollment.user | getDP}}">
+            <img style="width: 50%;" class="img" ng-src="{{enrollment.user}}">
           </div>
           <div class="row {{$index | rainbow}}" style="background:white;height:40px; margin-bottom:10px;">
             <span style="color:black;font-size:12px;color:white; top:-25px;position:relative;">{{enrollment.user | getName}}</span>
@@ -162,12 +162,12 @@
                 <h3>{{n.title}}</h3>
                 <hr>
                 <div class="container-fluid" style="overflow:hidden;height:158px;">
-                  <a href=""><h5>{{n.urlSuffix}}</h5></a>
                   <p>{{n.description}}</p>
                 </div>
               </div>
-              <div class="" ng-click="noteSection($index)" >
-                <i class="fa fa-plus-square pull-right" aria-hidden="true" style="cursor:pointer;"></i>
+              <div class="">
+                <a href=""><h5>{{n.urlSuffix}}</h5></a>
+                <i class="fa fa-plus-square pull-right" ng-click="noteSection($index)" aria-hidden="true" style="cursor:pointer;"></i>
               </div>
             </div>
 
