--- a/support/static/ngTemplates/app.projects.junk.explore.html
+++ b/support/static/ngTemplates/app.projects.junk.explore.html
@@ -90,6 +90,15 @@
           </div>
 
         </div>
+        <div class="row" style="padding-top:20px">
+          <div class="col-md-5 text-center">
+            <label> Currency Type : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.currency}}</span>
+          </div>
+
+        </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
             <label> PO Number : </label>
