--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -87,7 +87,14 @@
           <div class="col-md-7 text-center">
             <span> {{form.revision}}</span>
           </div>
-
+        </div>
+        <div class="row" style="padding-top:20px">
+          <div class="col-md-5 text-center">
+            <label> Currency Type : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.currency}}</span>
+          </div>
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
